agencement des contents equipements + description...

--- a/src/pages/LocationPage.scss
+++ b/src/pages/LocationPage.scss
@@ -6,8 +6,12 @@
     display: flex;
    justify-content: space-between;
    gap: 33px;
+   
    @media screen and (width<=768px) {
     flex-direction: column;
+}
+li{
+    list-style-type: none;
 }
 }
 }
