--- a/src/components/AppartHead.scss
+++ b/src/components/AppartHead.scss
@@ -26,7 +26,7 @@
         margin-bottom: 20px;
         margin-top: 0;
     }
-    &__tag{
+    .appart__tag{
         background-color: $color-primary;
         color: $color-tertiary;
         padding: 2px 22px;
