--- a/src/components/DescriptionPancarte.scss
+++ b/src/components/DescriptionPancarte.scss
@@ -1,6 +1,7 @@
 @use "../scss/variables.scss" as *;
 .description__pancarte{
     margin-bottom: 1rem;
+    flex-basis: 50%;
     p{
     margin-block: 0;
     // max-width: 45%;
