--- a/src/Layouts/header/Navbar.scss
+++ b/src/Layouts/header/Navbar.scss
@@ -5,18 +5,17 @@
     display: flex;
     flex-direction: row;
    text-align: center;
-  //  justify-content: space-between;
     gap: 2rem;
-    /* justify-content: space-between; */
     align-items: center;
     font-weight: 500;
     font-size: 24px;
-    /* margin: auto; */
     height: 68px;
-    margin: 20px 20px 44px 20px;
-  
+    margin: 30px 50px 50px 50px;
+
    @media screen and (width<=768px) {
-    text-transform: uppercase;;
+    text-transform: uppercase;
+    gap: 1rem;
+    margin: 30px 20px 50px 20px;
 }
    
    & >*:first-child{
@@ -41,7 +40,6 @@
  }
 @media screen and (width<=768px){
     .navbar__logo {
-        /* margin-right: auto; */
         width: 145px;
         height: 46.88px;
       
