--- a/src/components/DescriptionPancarte.scss
+++ b/src/components/DescriptionPancarte.scss
@@ -2,6 +2,7 @@
 .description__pancarte{
     margin-bottom: 1rem;
     flex-basis: 50%;
+    overflow: hiden;
     p{
     margin-block: 0;
     // max-width: 45%;
@@ -27,11 +28,9 @@
     & .fa-solid {
         font-size: 32px;
         cursor: pointer;
-      
-        
-    }
+      }
 }
-.description__article{
+.description__article__hidden{
     background-color: #f6f6f6;
     // max-width: 495px;
     padding: 25px 15px 25px 10px;
@@ -39,6 +38,19 @@
     position: relative;
     top: -0.3rem;
     z-index: 1;
-
+    animation: slide 0.6s ease-in-out;
 }
+}
+@keyframes slide{
+  0%{
+        transform: translateY(-100%);
+    }
+  
+}
+.description__pancarte .fa-chevron-down {
+    transition: transform 0.3s ease;
+}
+
+.description__pancarte .fa-chevron-down.rotated {
+    transform: rotate(180deg);
 }
