--- a/src/components/GridGallery.scss
+++ b/src/components/GridGallery.scss
@@ -6,9 +6,9 @@
     background-color:$color-quadrary;
    display: flex;
    flex-wrap: wrap;
- justify-content: space-around;
+ justify-content:flex start;
  gap: 33px;
- padding: 44px 0px 44px 0px;
+ padding: 44px 10px 44px 40px;
  & > *{
 width: 100%;
 max-width: 20rem; }
@@ -17,6 +17,6 @@ max-width: 20rem; }
     .galleryGrid{
         background-color: $color-tertiary;
         justify-content: center;
-        padding: 0 20px;
+        padding: 0 0px;
     } 
 }
