--- a/src/components/ImgBanner.scss
+++ b/src/components/ImgBanner.scss
@@ -1,9 +1,57 @@
 .img__banner{
-img{
-    width: 100%;
-    height: 415px;
-    object-fit: cover;
-    border-radius: 25px;
-    margin-bottom: 20px;
-}
+    position: relative;
+    margin-bottom: 2rem;
+    .btn{
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        bottom: 0;
+        // left: 0;
+        width: 5rem;
+        font-size: 5rem;
+        background-color: transparent;
+        color: white;
+        border-width: 0;
+        &.btn-next{
+            right: 0;
+        }
+        &.btn-prev{
+            left: 0;
+        }
+        
+    }
+    .counter-caroussel{
+            position: absolute;
+            color: white;
+         
+            bottom: 10px;
+            // top: 0;
+            // right: 0;
+            font-size: 1.5rem;
+            width: 100%;
+            text-align: center;
+            
+    
+        }
+ 
+    .image__container {
+        height:415px;
+        width: 100%;
+        position: relative;
+
+        img{
+            position: absolute;
+            inset: 0;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 25px;
+            margin-bottom: 20px;
+            opacity: 0;
+            transition: opacity .8s ease-in-out;
+            &.show {
+                opacity: 1;
+            }
+        }
+    }
 }
