--- a/src/Layouts/banner/Banner.scss
+++ b/src/Layouts/banner/Banner.scss
@@ -1,25 +1,108 @@
 
 @use './../../scss/variables.scss'as *; 
-.banner{
-    /* position: relative; */
-    background-image: url("img1.png");
-    background-position: center;
-    /* background-size: cover; */
-    /* margin: auto; */
+// .banner{
+//     /* position: relative; */
+//     // background-image: url("img1.png");
+//     // background-position: center;
+//     // background-size: cover; 
+//     /* margin: auto; */
+//     height: 223px;
+//   // max-width: 1440px;
+//     border-radius: 25px;
+//     display: grid;
+//     place-items: center;
+//     color: $color-tertiary ;
+//     opacity: 90%;
+//    margin-bottom: 3rem;
+//     background-repeat: no-repeat;
+//     text-align: center;
+//     @media screen and (width<=768px){
+//       text-align: start;
+//       font-size: 14px;
+//       font-weight: 700;
+//       padding: 0 20px;
+// }
+// }
+// .banner{
+//   position: relative;
+//   //   height: 223px;
+//   // width: 1440px;
+//   border-radius: 25px;
+//   & h1{
+//   position: absolute;
+//   top: 50%;
+//   right: 50%;
+//   transform: translate(-50%, -50%);
+// //   top: 79px;
+// //   width: 452px;
+// //   margin-left: auto;
+// //   text-align: center;
+// //   display: grid;
+// //  place-items: center;
+//   color: red;
+// }
+// & img{
+//   height: 223px;
+//   width: 100%;
+//   border-radius: 25px;
+//   object-fit: cover;
+// }
+//  }
+
+
+
+
+
+
+
+
+
+.banner {
+  position: relative;
+  border-radius: 25px;
+  margin-bottom: 33px;
+
+  h1 {
+    position: absolute;
+    font-size: 48px;
+    font-weight: 700;
+    top: 39%;
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    color: white;
+    // mix-blend-mode: overlay;
+   
+  }
+
+  img {
     height: 223px;
-  max-width: 100%;
+    width: 100%;
     border-radius: 25px;
-    display: grid;
-    place-items: center;
-    color: $color-tertiary ;
-    opacity: 90%;
-   margin-bottom: 3rem;
-    background-repeat: no-repeat;
-    text-align: center;
-    @media screen and (width<=768px){
-      text-align: start;
-      font-size: 14px;
-      font-weight: 700;
-      padding: 0 20px;
+    object-fit: cover;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    opacity: 160%;
+    
+
+  }
+  @media screen and (width<=1429px){
+    h1{
+      top: 39%;
+      left: 26%;
+      transform: translate(-15%, -50%);
+    }
+  }
+  @media screen and (width<=1000px){
+    h1{
+      top: 39%;
+      left: 1%;
+      transform: translate(1%, -50%);
+    }
+  }
+  @media screen and (width<=800px){
+    h1{top: 39%;
+    left: 3%; 
+    transform: translate(0%, -50%);
+    font-size: 24px;
+   }
 }
 }
