--- a/src/Layouts/footer/Footer.scss
+++ b/src/Layouts/footer/Footer.scss
@@ -3,8 +3,8 @@
     background-color: black;
     color: $color-tertiary;
     text-align: center;
-    /* min-height: 200px; */
-    padding: 80px 0 30px 0;
+    min-height: 200px; 
+    padding: 0px 0 0px 0;
     margin-top: 55px;
     & img{
       max-width: 122px;
@@ -12,6 +12,6 @@
       background-image: $color-secondary;
       color: $color-secondary;
       background-color: black;
-      padding-bottom: 35px;
+      padding: 55px 0 35px 0;
     }
 }
