--- a/src/components/DescriptionPancarte.scss
+++ b/src/components/DescriptionPancarte.scss
@@ -1,13 +1,16 @@
 @use "../scss/variables.scss" as *;
 .description__pancarte{
+   
     margin-bottom: 1rem;
     flex-basis: 50%;
-    overflow: hiden;
+    overflow: hidden;
+    
     p{
     margin-block: 0;
-    // max-width: 45%;
+    // max-width: 90%;
+  
 }
-    .description__title{
+   & .description__title{
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -25,30 +28,42 @@
     padding: 0 10px;
     position: relative;
     z-index: 2;
+    
     & .fa-solid {
         font-size: 32px;
         cursor: pointer;
       }
+      @media screen and (width<=768px){
+       
+       & .description__title{
+                font-size: 13;
+           }
+        & .fa-solid {
+            font-size: 16px;
+        } 
+      }
 }
 .description__article__hidden{
     background-color: #f6f6f6;
+  
     // max-width: 495px;
     padding: 25px 15px 25px 10px;
     border-radius: 5px ;
     position: relative;
-    top: -0.3rem;
+    top: 0px;
+    overflow: hidden;
     z-index: 1;
-    animation: slide 0.6s ease-in-out;
+    animation: slide 0.3s ease-in-out;
 }
 }
 @keyframes slide{
   0%{
-        transform: translateY(-100%);
+        transform: translateY(-99.5%);
     }
   
 }
 .description__pancarte .fa-chevron-down {
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease-in-out;
 }
 
 .description__pancarte .fa-chevron-down.rotated {
