--- a/src/components/GridGallery.scss
+++ b/src/components/GridGallery.scss
@@ -6,9 +6,9 @@
     background-color:$color-quadrary;
    display: flex;
    flex-wrap: wrap;
- justify-content:flex start;
+ justify-content:space-around;
  gap: 33px;
- padding: 44px 10px 44px 40px;
+ padding: 44px 10px 44px 10px;
  & > *{
 width: 100%;
 max-width: 20rem; }
@@ -17,6 +17,8 @@ max-width: 20rem; }
     .galleryGrid{
         background-color: $color-tertiary;
         justify-content: center;
-        padding: 0 0px;
+        padding: 0;
+        gap: 22px;
+    
     } 
 }
