--- a/src/components/ImgBanner.scss
+++ b/src/components/ImgBanner.scss
@@ -18,7 +18,14 @@
         &.btn-prev{
             left: 0;
         }
-        
+        & .fa-solid{
+            font-size: 47px;
+        }
+        @media screen and (width<=768px){
+            & .fa-chevron-right, .fa-chevron-left{
+                font-size: 24px;
+            }
+        }
     }
     .counter-caroussel{
             position: absolute;
