--- a/src/components/Location.scss
+++ b/src/components/Location.scss
@@ -10,7 +10,7 @@
     img{
         // width: 100%;
         // height: 100%;
-       width: 340px;
+       width: 100%;
         height: 340px;
         object-fit: cover;
         border-radius: 10px;
@@ -24,6 +24,9 @@
             // min-width: 325px;
             // min-height: 255px;
         } 
+    //    a{
+    //         margin:auto;
+    //     }
     }
     & &__subtitle{
         position: absolute;
