--- a/src/pages/Apropos.scss
+++ b/src/pages/Apropos.scss
@@ -1,56 +1,6 @@
-@use "../scss/variables.scss" as *;
-.description__pancarte{
-    margin-bottom: 1rem;
-    flex-basis: 50%;
-    overflow: hiden;
-    p{
-    margin-block: 0;
-    // max-width: 45%;
-}
-    .description__title{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    background-color: $color-primary;
-    color: white;
-   
-    height:52px;
-    border-radius: 5px ;
-    // max-width: 500px;
-    height: 32px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 25.67px;
-    text-align: left;
-    padding: 0 10px;
-    position: relative;
-    z-index: 2;
-    & .fa-solid {
-        font-size: 32px;
-        cursor: pointer;
-      }
-}
-.description__article__hidden{
-    background-color: #f6f6f6;
-    // max-width: 495px;
-    padding: 25px 15px 25px 10px;
-    border-radius: 5px ;
-    position: relative;
-    top: -0.3rem;
-    z-index: 1;
-    animation: slide 0.6s ease-in-out;
-}
-}
-@keyframes slide{
-  0%{
-        transform: translateY(-100%);
+.pancarteMargin{
+    margin:0 100px 0 100px;
+    @media screen and (width<=768px){
+        margin: 0 0 0 0 ;
     }
-  
-}
-.description__pancarte .fa-chevron-down {
-    transition: transform 0.3s ease;
-}
-
-.description__pancarte .fa-chevron-down.rotated {
-    transform: rotate(180deg);
 }
