--- a/src/components/Location.scss
+++ b/src/components/Location.scss
@@ -10,24 +10,26 @@
     img{
         // width: 100%;
         // height: 100%;
-       width: 100%;
+       width: 340px;
         height: 340px;
         object-fit: cover;
         border-radius: 10px;
-    }
+        filter: brightness(90%);
+    
     @media screen and (width<=768px){
-        .location{
+       
             /* max-width: auto;
             max-height: auto; */
             flex-basis: 100%;
             // justify-content: center;
             // min-width: 325px;
-            // min-height: 255px;
-        } 
+           height: 255px;
+           width: 315px;
+        } }
     //    a{
     //         margin:auto;
     //     }
-    }
+    
     & &__subtitle{
         position: absolute;
         display: grid;
